# ssrf-auditor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
data/payloads/: README.md  ssrf_payloads.txt
src/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  main.py  models.py
src/engine/: __init__.py  crawler.py  plugin_loader.py  rate_limiter.py  scanner.py
src/exploit/: __init__.py  auth_bypass.py  data_extract.py  destruct.py  engine.py  privilege_esc.py  rce.py  ssrf_exploit.py
src/modules/: __init__.py  api_surface.py  base.py  cloud_assets.py  cloud_metadata.py  infra_disclosure.py  js_analysis.py  reporting.py  risk_engine.py  security_headers.py  sensitive_files.py  ssrf_discovery.py
src/reports/: __init__.py
src/utils/: __init__.py  helpers.py  http.py  logger.py  parsers.py  validators.py
tests/: __init__.py  test_config.py  test_engine.py  test_modules.py  test_reporting.py
tests/fixtures/: sample_response.py
