[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssrf-auditor"
version = "2.0.0"
description = "Production-grade SSRF & Infrastructure Disclosure Auditing Framework for Kali Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Security Research Team", email = "security@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Penetration Testing",
]
dependencies = [
    "aiohttp>=3.9.0",
    "aiohttp-socks>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "yarl>=1.9.0",
    "pyyaml>=6.0",
    "jsbeautifier>=1.14.0",
    "jmespath>=1.0.0",
    "jinja2>=3.1.0",
    "orjson>=3.9.0",
    "tqdm>=4.65.0",
    "rich>=13.5.0",
    "ply>=3.11",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "dataclasses-json>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docker = [
    "docker>=6.1.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
ssrf-audit = "src.main:entry_point"

[tool.setuptools.packages.find]
where = ["src", "tests"]
include = ["src*", "tests*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "online: marks tests that make network requests (deselect with '-m \"not online\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 120
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = true

[tool.black]
line-length = 120
target-version = ["py312"]
